# MedNotes

./: LICENSE
mednotes/: Makefile  compose.yaml  main.py  pyproject.toml
mednotes/backend/mednotes/api/: app.py  ml.py
mednotes/backend/mednotes/db/: __init__.py  connection.py  enums.py  ml.py  types.py
mednotes/backend/mednotes/schema/: ml.py
mednotes/compose/: api.yaml
mednotes/containers/: Dockerfile.api
mednotes/frontend/: .env.dev  codegen.sh  dump_openapi.py  package-lock.json  package.json  vite.config.ts
mednotes/frontend-mednotes/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
mednotes/frontend-mednotes/src/: App.js  App.js.map  App.tsx  svg.d.ts
mednotes/frontend/src/: App.css  App.tsx  main.tsx
mednotes/frontend/src/client/: index.ts
mednotes/frontend/src/components/background/: background-draw.tsx
mednotes/frontend/src/components/data-table/: data-table.tsx
mednotes/frontend/src/components/query/: query.tsx
mednotes/frontend/src/components/topics/: topic.tsx
mednotes/frontend/src/components/usercard/: usercard.tsx
mednotes/frontend/src/generated_client/: api.ts
mednotes/frontend/src/hooks/: notes.tsx
mednotes/frontend/src/utils/: toPromise.tsx
