[project]
name = "mednotes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.1",
    "matplotlib>=3.10.7",
    "pgvector>=0.4.1",
    "psycopg>=3.2.12",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.3",
    "pyqt5>=5.15.11",
    "pyyaml>=6.0.3",
    "ruff>=0.14.2",
    "sentence-transformers>=5.1.2",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "torch",
]


[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true # Optional: ensures this index is only used for explicitly specified packages


[tool.setuptools.packages.find]
where=['backend/']
include = ["*"]
